[package]
name = "encrypted-fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
fuser = "0.17"
lru = "0.16"
nonzero_lit = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

[dev-dependencies]
assertables = "9.8"
quickcheck = "1.1"
quickcheck_macros = "1.2"
rand = { version = "0.10", features = ["chacha"] }
rstest = "0.26"
tempdir = "0.3"
